--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Build
         run: |
            cd "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\MSBuild\Current\Bin\"
-           .\MSBuild.exe $Env:GITHUB_WORKSPACE\
+           .\MSBuild.exe $Env:GITHUB_WORKSPACE\ /p:Configuration=Release 
            
       - uses: actions/upload-artifact@v1
         with:
